[package]
name = "selfie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stable_deref_trait = { version = "1.2.0", default-features = false, optional = true }

[features]
"alloc" = ["stable_deref_trait/alloc"]
"std" = ["stable_deref_trait/std"]

[target.'cfg(not(miri))'.dev-dependencies]
trybuild = "1.0.55"
